docs/examples/invalid/syntaxErr/extension/side-effects/pairEffects.wacc
{
  pair(int, int) p = newpair(10, 3);

  fst p += 10;
  int a = fst p;

  println a
}
